CI checks for every branch

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,11 +16,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+          cache: npm
+
+      - name: Install dependencies
+        run: npm ci
+        working-directory: gamedev
+
+      - name: Build (if needed)
+        run: npm run build --if-present
+        working-directory: gamedev
+
+      - name: Test
+        run: npm test
+        working-directory: gamedev
