--- a/gamedev/package.json
+++ b/gamedev/package.json
@@ -5,11 +5,7 @@
   "description": "testing run for your life geolocation",
   "main": "server.js",
   "scripts": {
-<<<<<<< HEAD
-    "test": "echo \"Error: no test specified\" && exit 1",
-=======
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage --verbose && echo \"Error: no test specified\" && exit 1",
->>>>>>> dd9b40e (Restore package.json and package-lock.json changes from stash)
     "start": "nodemon server.js"
   },
   "author": "",
@@ -20,13 +16,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemon": "^3.1.9"
-<<<<<<< HEAD
-=======
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
->>>>>>> dd9b40e (Restore package.json and package-lock.json changes from stash)
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3"
   }
 }
