--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Run Tests on Push & PR
 
 on:  
   push:
-    branches: [main, dev] 
+    branches: [main, gamedev] 
   pull_request:
-    branches: [main, dev]  
+    branches: [main, gamedev]  
 
 jobs:
   test:
@@ -30,7 +30,9 @@ jobs:
           node-version: 20  
 
       - name: Install dependencies
-        run: npm install  
+        run: 
+          cd gamedev
+          npm install  
 
       - name: Wait for PostgreSQL to be ready
         run: sleep 10
@@ -41,4 +43,6 @@ jobs:
 
 
       - name: Run Tests
-        run: npm test  
+        run: 
+          cd gamedev
+          npm test  
