--- a/gamedev/package.json
+++ b/gamedev/package.json
@@ -5,7 +5,7 @@
   "description": "testing run for your life geolocation",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --verbose && echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
   "author": "",
@@ -16,5 +16,15 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "supertest": "^7.0.0",
+    "wait-on": "^8.0.2"
   }
 }
