--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         image: postgres:latest
         env:
           POSTGRES_USER: run_for_your_life_user
-          POSTGRES_PASSWORD: 8fFWEwEBpMPdijfG10sYt8p0UfMsT9Yo
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }} 
           POSTGRES_DB: run_for_your_life
         ports:
           - 5432:5432  
@@ -39,11 +39,15 @@ jobs:
           echo "Waiting for PostgreSQL"
           sleep 10
         
-      - name: Initialize Database
+      - name: Initialize Database Schema
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }} 
         run: |
-          PGPASSWORD=POSTGRES_PASSWORD psql -h postgresql://run_for_your_life_user:8fFWEwEBpMPdijfG10sYt8p0UfMsT9Yo@dpg-cusf9fl6l47c7386ejjg-a.oregon-postgres.render.com/run_for_your_life -U run_for_your_life_user -d run_for_your_life -c "CREATE DATABASE run_for_your_life;"
+          PGPASSWORD=${{ secrets.POSTGRES_PASSWORD }} psql -h dpg-cusf9fl6l47c7386ejjg-a.oregon-postgres.render.com -U run_for_your_life_user -d run_for_your_life -f database/query.sql  # ✅ Corrected Connection Format
 
       - name: Run Tests
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}  
         run: |
           cd gamedev
           npm test  
