--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,16 +10,6 @@ jobs:
   test:
     runs-on: ubuntu-latest 
 
-    services:
-      postgres:
-        image: postgres:latest
-        env:
-          POSTGRES_USER: run_for_your_life_user
-          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}  
-          POSTGRES_DB: run_for_your_life
-        ports:
-          - 5432:5432  
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3  
@@ -41,13 +31,16 @@ jobs:
         
       - name: Initialize Database Schema
         env:
+          PGPASSWORD: ${{ secrets.POSTGRES_PASSWORD }}  
           DATABASE_URL: ${{ secrets.DATABASE_URL }}  
         run: |
-          PGPASSWORD=${{ secrets.POSTGRES_PASSWORD }} psql -h dpg-cusf9fl6l47c7386ejjg-a.oregon-postgres.render.com -U run_for_your_life_user -d run_for_your_life -f database/query.sql 
+          export PGPASSWORD=${{ secrets.POSTGRES_PASSWORD }}  # ✅ Ensure password is passed
+          psql -h dpg-cusf9fl6l47c7386ejjg-a.oregon-postgres.render.com -U run_for_your_life_user -d run_for_your_life -f database/query.sql 
 
       - name: Run Tests
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          PGPASSWORD: ${{ secrets.POSTGRES_PASSWORD }}  
         run: |
           cd gamedev
           npm test  
