--- a/gamedev/package.json
+++ b/gamedev/package.json
@@ -5,7 +5,7 @@
   "description": "testing run for your life geolocation",
   "main": "server.js",
   "scripts": {
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --verbose && echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=jest.config.cjs --verbose --detectOpenHandles",
     "start": "nodemon server.js"
   },
   "author": "",
@@ -23,7 +23,11 @@
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
+    "jest-puppeteer": "^11.0.0",
+    "jsdom": "^22.1.0",
+    "puppeteer": "^24.4.0",
     "supertest": "^7.0.0",
     "wait-on": "^8.0.2"
   }
